Closed
Bug 54604
Opened 24 years ago
Closed 24 years ago
Draft & Templates: Can't send message if msg contains inline image
Categories
(MailNews Core :: Composition, defect, P3)
MailNews Core
Composition
Tracking
(Not tracked)
VERIFIED
FIXED
M18
People
(Reporter: pmock, Assigned: bugzilla)
Details
(Keywords: regression, Whiteboard: [nsbeta3+][rtm++])
Build Date & Platform Bug Found:
win32 commercial seamonkey build 2000-092809-mn6 installed on P500 Win98
linux commercial seamonkey build 2000-092810-mn6 installed on P200 RedHat 6.2
macos commercial seamonkey build 2000-092812-mn6 installed on G3/400 OS 9.04
Overview Description:
Regression from yesterday branch build. In today build, when you edit a
mesasge as new (draft or template), inserted graphic images do not render. The
image box shows where the image show be. When you try to send, the send process
stops. No error message. (On Linux, the terminal windows displays "failed to
SendMsg".)
This bug is nominated for RTM candidate because, it makes drafts and templates
useless, especially the American Greeting templates that we are including for
the first time for beta. Esther believes and supports that this bug should be
nominated for RTM.
To get the message to send ... you have to delete all the inline images out
which makes the American Greeting templates useless.
Steps to Reproduce:
1) Start seamonkey
2) Open mail
3) Start a HTML mail message
4) Add a subject title and some text in the message body
5) Insert a gif into the message body
6) Save the message as template or draft
7) Close the message
8) Open the template/draft
9) Add a recipent to the address field
10) Send a message
The message stops
Actual Results:
The message fails to send.
Expected Results:
When you edit a message as new (draft / template) all the inserted images
should render.
Additional Information:
Nominating for rtm candidate.
Changing qa assign to myself.
This worked yesterday... :(
Keywords: nsbeta3,
regression
QA Contact: esther → pmock
Comment 2•24 years ago
|
||
Seth, did you check in the inline image stuff? Is this in any way possibly related?
Comment 4•24 years ago
|
||
rhp checked in his fix to mime, but I don't think is related.
I'd need to debug to know for sure.
ducarroz, let me know if you want help with this one.
Assignee | ||
Comment 5•24 years ago
|
||
I can confirm, it was still working on Windows with the build 2000-092711-MN6.
The problem seems to occurs when editing the draft message and not when saving
the draft. Looking at the checkin that append between those build...
Status: NEW → ASSIGNED
Target Milestone: --- → M18
Assignee | ||
Comment 6•24 years ago
|
||
for some reason, we are not able to retreive the image from the
url mailbox_message://nobody@local%20folders/Drafts#0?part=1.2
Comment 7•24 years ago
|
||
talking to ducarroz, it might be related. we'll do some debugging after lunch.
Assignee | ||
Comment 8•24 years ago
|
||
Ok, backing up rhp chanhes in nsStreamConverter.cpp fix this problem but broke
the image display in Mail3pane! I need to find a compromise...
Assignee | ||
Comment 10•24 years ago
|
||
I think I understand the problem.
When you a viewing a message, (msd->url_name) and (msd->options->url) point to
the same address but in the case of a template or a draft, they are not, both
pointers have their own copy of the url. Therefore The fix rhp did should apply
only for the message viewing case.
Comment 11•24 years ago
|
||
Do we have a fix in hand? Has it been reviewed?
Assignee | ||
Comment 12•24 years ago
|
||
here is what rhp did:
Index: nsStreamConverter.cpp
===================================================================
RCS file: /cvsroot/mozilla/mailnews/mime/src/nsStreamConverter.cpp,v
retrieving revision 1.65.2.1
retrieving revision 1.67
diff -u -2 -r1.65.2.1 -r1.67
--- nsStreamConverter.cpp 2000/09/19 22:55:10 1.65.2.1
+++ nsStreamConverter.cpp 2000/09/27 21:08:42 1.67
@@ -111,4 +111,5 @@
{
nsMIMESession *session = (nsMIMESession *)bridgeStream;
+ const char **fixup_pointer = nsnull;
if (session)
@@ -129,4 +130,5 @@
override_charset = &(mdd->options->override_charset);
url_name = &(mdd->url_name);
+ fixup_pointer = &(mdd->options->url);
}
}
@@ -140,4 +142,5 @@
override_charset = &(msd->options->override_charset);
url_name = &(msd->url_name);
+ fixup_pointer = &(msd->options->url);
}
}
@@ -191,4 +194,6 @@
return NS_ERROR_OUT_OF_MEMORY;
+ // rhp: Ugh, this is ugly...but it works.
+ *fixup_pointer = (const char *)*url_name;
CRTFREEIF(urlString);
}
Assignee | ||
Comment 13•24 years ago
|
||
and here is the fix to this problem:
Index: src/nsStreamConverter.cpp
===================================================================
RCS file: /cvsroot/mozilla/mailnews/mime/src/nsStreamConverter.cpp,v
retrieving revision 1.66.4.1
diff -u -2 -r1.66.4.1 nsStreamConverter.cpp
--- nsStreamConverter.cpp 2000/09/27 21:09:47 1.66.4.1
+++ nsStreamConverter.cpp 2000/09/29 21:10:00
@@ -130,5 +130,4 @@
override_charset = &(mdd->options->override_charset);
url_name = &(mdd->url_name);
- fixup_pointer = &(mdd->options->url);
}
}
@@ -195,5 +194,6 @@
// rhp: Ugh, this is ugly...but it works.
- *fixup_pointer = (const char *)*url_name;
+ if (fixup_pointer)
+ *fixup_pointer = (const char *)*url_name;
CRTFREEIF(urlString);
}
Assignee | ||
Comment 14•24 years ago
|
||
sspitzer reviewed the fix. I have tested image viewing, draft edit & send, template edit & send, reply to a message
with image & send, New message + image & send. Everything works perfectly. No crash, no missing image.
Whiteboard: Fix in hand
Comment 15•24 years ago
|
||
talked to jean-francois on the phone - sounds like the right fix, and
appropriate testing has been done. sr=alecf
Assignee | ||
Updated•24 years ago
|
Whiteboard: Fix in hand → Fix in hand, reviewed (2x)
Comment 16•24 years ago
|
||
Adding nsbeta3+ since there's a chance this will get in if there's a respin and
I want to make sure it shows up on the nsbeta3+ radar.
Keywords: nsbeta3
Whiteboard: Fix in hand, reviewed (2x) → [nsbeta3+]Fix in hand, reviewed (2x)
Comment 17•24 years ago
|
||
rtm+, frequent case can't send.
Whiteboard: [nsbeta3+]Fix in hand, reviewed (2x) → [nsbeta3+][rtm+]Fix in hand, reviewed (2x)
Assignee | ||
Updated•24 years ago
|
Whiteboard: [nsbeta3+][rtm+]Fix in hand, reviewed (2x) → [nsbeta3+][rtm+]Fix in hand, reviewed and approved
Comment 18•24 years ago
|
||
PDT marking [rtm++]
Whiteboard: [nsbeta3+][rtm+]Fix in hand, reviewed and approved → [nsbeta3+][rtm++]Fix in hand, reviewed and approved
Assignee | ||
Comment 19•24 years ago
|
||
Fixed and checked in Trunk & Branch
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Whiteboard: [nsbeta3+][rtm++]Fix in hand, reviewed and approved → [nsbeta3+][rtm++]
Reporter | ||
Comment 20•24 years ago
|
||
Verified as fixed on branch commercial builds of win32, linux, and macos using
the following builds:
win32 commercial seamonkey build 2000-100609-mn6 installed on P500 Win98
linux commercial seamonkey build 2000-100610-mn6 installed on P200 RedHat 6.2
macos commercial seamonkey build 2000-100613-mn6 installed on G3/400 OS 9.04
Verified on pop and imap. I can successfully send message with inline images.
Status: RESOLVED → VERIFIED
Keywords: vtrunk
Comment 21•24 years ago
|
||
reopening so this can be verified on trunk too.
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
Comment 22•24 years ago
|
||
resolving again as fixed so this can be verified on trunk
Status: REOPENED → RESOLVED
Closed: 24 years ago → 24 years ago
Resolution: --- → FIXED
Comment 23•24 years ago
|
||
OK using commercial trunk builds:
2001-02-20-20 win98
2001-02-20-12 linux rh6.0
2001-02-20-13 mac OS 9.0
Status: RESOLVED → VERIFIED
Updated•20 years ago
|
Product: MailNews → Core
Updated•16 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•