Fix for bug 54604. In case of template or draft, mdd->url_name != mdd->options->url.  R=sspitzer, SR=alecf