mailnews/mime/src/nsStreamConverter.cpp
@@ -129,7 +129,6 @@ bridge_new_new_uri(void *bridgeStream, nsIURI *aURI, PRInt32 aOutputType)
           default_charset = &(mdd->options->default_charset);
           override_charset = &(mdd->options->override_charset);
           url_name = &(mdd->url_name);
-          fixup_pointer = &(mdd->options->url);
         }
       }
       else
@@ -194,7 +193,8 @@ bridge_new_new_uri(void *bridgeStream, nsIURI *aURI, PRInt32 aOutputType)
               return NS_ERROR_OUT_OF_MEMORY;
 
             // rhp: Ugh, this is ugly...but it works.
-            *fixup_pointer = (const char *)*url_name;
+            if (fixup_pointer)
+              *fixup_pointer = (const char *)*url_name;
             CRTFREEIF(urlString);
           }
         }
